test/fixtures/web-platform-tests/resources/webidl2/test/invalid/idl/implements_and_includes_ws.widl
// This hits the unshifting of whitespace in the "implements" and
// "includes" productions. If there is a bug in that whitespace
// rollback, the wrong exception will be produced.
foobar;
